# millicord.py

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Pipfile  docker-compose.yml  get_resources.sh  helper.py  main.py  setup.cfg  t_helper.py
.github/workflows/: docker-image.yml
idols/: miyaomiya.yaml
idols/envs/: .env.sample
millicord/: __init__.py  cli.py  idol.py  idol_builder.py  idol_client.py  idol_modules.py
millicord/modules/: __init__.py  basic_module.py  time_keeping.py
millicord/modules/recognition/: idol_recognition.py  module.py
millicord/modules/utils/: functions.py  idol_base.py  idol_exceptions.py  module_base.py  setting.py
millicord/recognition/: idol_recognition.py
millicord/utils/: __init__.py  idol_base.py  idol_exceptions.py  module_base.py  setting.py
scripts/: docker_build.sh  get_resources.sh
tests/: __init__.py  cli_test.py  idol_base_test.py  idol_builder_test.py  idol_modules_test.py  idol_recognition_test.py  idol_setting_test.py  idol_test.py  millicord  module_base_test.py  setting_test.py  test_helper.py  utils.py
tests/idols/: testbot.yml
tests/idols/idol_base_test_idol/: config.yaml  script.yaml
tests/idols/idol_builder_test_idol/: config.yaml  modules.yaml  script.yaml
tests/idols/idol_module_test_idol/: modules.yaml
tests/idols/setting_test_idol/: config.yaml
