[metadata]
name = millicord.py
version = millicord.__version__
url = https://github.com/be-a-step/millicord.py
author = be-a-step
license_file = LICENSE
description = Discord bot launcher.
long_description = file: README.md
test_suite = tests

[options]
packages = find:
install_requires =
  discord
  pyyaml
